--- a/online.html
+++ b/online.html
@@ -6,7 +6,7 @@
     <title>ONLINE SHOP -PART-  │ 帽子専門店</title>
     <meta name="description" content="">
     <meta name="viewport" content="wodth=device-width,initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://tetsuya-nishikawa.github.io/PART/style.css">
 </head>
 
 <body>
